feat: Handle program stage section working, with tests [DHIS2-14429]