@@ -28,10 +28,10 @@
 package org.hisp.dhis.program;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -41,7 +41,7 @@ import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.dataelement.DataElementService;
 import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
-import org.hisp.dhis.test.integration.SingleSetupIntegrationTestBase;
+import org.hisp.dhis.test.integration.TransactionalIntegrationTest;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -49,7 +49,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 /**
  * @author Chau Thu Tran
  */
-class ProgramStageSectionStoreTest extends SingleSetupIntegrationTestBase {
+class ProgramStageSectionStoreTest extends TransactionalIntegrationTest {
 
   @Autowired private ProgramStageSectionStore programStageSectionStore;
 
@@ -127,40 +127,18 @@ class ProgramStageSectionStoreTest extends SingleSetupIntegrationTestBase {
   @DisplayName("retrieving program stage sections by data element returns expected entries")
   void getProgramStageSectionsByDataElement() {
     // given
-    // public static Program createProgram(
-    //      char uniqueCharacter,
-    //      Set<ProgramStage> programStages,
-    //      Set<TrackedEntityAttribute> attributes,
-    //      Set<OrganisationUnit> organisationUnits,
-    //      CategoryCombo categoryCombo)
-    CategoryCombo cc = createCategoryCombo('j');
-    manager.save(cc);
-    Program program = createProgram('k', null, null, null, cc);
-    programService.addProgram(program);
-    ProgramStage stage = createProgramStage('S', program);
-    program.setProgramStages(Set.of(stage));
-    programStageService.saveProgramStage(stage);
-    programService.updateProgram(program);
-
     DataElement de1 = createDataElementAndSave('q');
     DataElement de2 = createDataElementAndSave('r');
     DataElement de3 = createDataElementAndSave('s');
     DataElement de4 = createDataElementAndSave('t');
 
-    //    sectionA.getDataElements().addAll(dataElements);
-    //    sectionB.getDataElements().add(de3);
-    //
-    createProgramStageSectionAndSave('a', 1, stage, de1, de2);
-    createProgramStageSectionAndSave('b', 2, stage, de3);
-    createProgramStageSectionAndSave('c', 3, stage, de4);
-
-    //    createProgramStageSectionAndSave('a', 1, de1, de2);
-    //    createProgramStageSectionAndSave('b', 2, de3);
-    //    createProgramStageSectionAndSave('c', 3, de4);
+    createProgramStageSectionAndSave('a', 1, de1, de2);
+    createProgramStageSectionAndSave('b', 2, de3);
+    createProgramStageSectionAndSave('c', 3, de4);
 
     // when
     List<ProgramStageSection> programStageSections =
-        programStageSectionStore.getByDataElement(List.of(de1, de2, de3));
+        programStageSectionStore.getAllByDataElement(List.of(de1, de2, de3));
 
     // then
     assertEquals(2, programStageSections.size());
@@ -168,27 +146,23 @@ class ProgramStageSectionStoreTest extends SingleSetupIntegrationTestBase {
         programStageSections.stream()
             .flatMap(pss -> pss.getDataElements().stream())
             .toList()
-            .containsAll(dataElements));
+            .containsAll(List.of(de1, de2, de3)));
+
+    assertFalse(
+        programStageSections.stream()
+            .flatMap(pss -> pss.getDataElements().stream())
+            .toList()
+            .contains(de4));
   }
 
-  private void createProgramStageSectionAndSave(
-      char c, int order, ProgramStage stage, DataElement... des) {
+  private void createProgramStageSectionAndSave(char c, int order, DataElement... des) {
     ProgramStageSection pss = createProgramStageSection(c, order);
-    pss.getDataElements().addAll(Arrays.asList(des));
-    stage.getProgramStageSections().add(pss);
-    pss.setProgramStage(stage);
-    programStageService.saveProgramStage(stage);
-    programStageSectionService.saveProgramStageSection(pss);
+    pss.getDataElements().addAll(List.of(des));
+    programStageSectionStore.save(pss);
   }
-
-  //  private void createProgramStageSectionAndSave(char c, int order, DataElement... des) {
-  //    ProgramStageSection pss = createProgramStageSection(c, order, des);
-  //    programStageSectionService.saveProgramStageSection(pss);
-  //    return pss;
-  //  }
 
   private DataElement createDataElementAndSave(char c) {
-    CategoryCombo cc = createCategoryCombo('z');
+    CategoryCombo cc = createCategoryCombo(c);
     manager.save(cc);
 
     DataElement de = createDataElement(c, cc);
